# random-forest-algorithm

./: .gitignore  README.md
backend/: .gitignore  CMakeLists.txt
backend/include/: CSVDatasetFileContent.h  DecisionTree.h  RandomForestModel.h  api_responses.h  constants.h  containers.h  decision_tree.h  exceptions.h  math_functions.h  random_forest_model.h  utils.h
backend/src/: CSVDatasetFileContent.cpp  DecisionTree.cpp  DecisionTreeNodes.cpp  RandomForestModel.cpp  decision_tree.cpp  decision_tree_nodes.cpp  main.cpp  math_functions.cpp  server.cpp  utils.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  FileUploader.tsx  LoadingOverlay.tsx  RandomForestAlgorithmGenerator.tsx  TreeGenerator.tsx
frontend/src/types/: api_responses.ts
